--- a/index.html
+++ b/index.html
@@ -1,180 +1,318 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VATHSALYAM - Special School</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>VATHSALYAM — Special School for Intellectual Children</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <!-- Basic SEO -->
+  <meta name="description" content="VATHSALYAM — SevaBharathi's special project: a school for differently-abled children focused on individual growth and community change.">
+
   <style>
-    :root {
-      --bg-color: #f2f2f2;
-      --text-color: #333;
-      --card-bg: #fff;
+    /* ==========================
+       VARIABLES & BASE STYLES
+       ========================== */
+    :root{
+      --bg:#ffffff;
+      --muted:#f6f9fb;
+      --card:#ffffff;
+      --accent:#4aa96c; /* calming green */
+      --accent-2:#2b8fb6; /* soft blue */
+      --text:#0f1724;
+      --subtext:#4b5563;
+      --radius:14px;
+      --shadow: 0 6px 20px rgba(15,23,36,0.08);
+      --glass: rgba(255,255,255,0.7);
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
+    *{box-sizing:border-box}
+    html,body{height:100%;}
+    body{
+      margin:0;
+      font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      background:linear-gradient(180deg,var(--muted),#fff 40%);
+      color:var(--text);
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      line-height:1.5;
     }
 
-    body {
-      font-family: Arial, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
+    img{max-width:100%;display:block;height:auto}
+    a{color:inherit;text-decoration:none}
+
+    .container{max-width:1100px;margin:0 auto;padding:0 20px}
+
+    /* ==========================
+       HEADER
+       ========================== */
+    header.site-header{
+      background:var(--bg);
+      padding:28px 0 8px;
+      position:relative;
+      z-index:40;
     }
 
-    header {
-      background: url('mission.jpeg') center/cover no-repeat;
-      padding: 70px 20px 60px;
-      text-align: center;
-      color: white;
+    .brand{
+      text-align:center;
+      padding:6px 0 14px;
+    }
+    .brand h1{
+      margin:0;font-size:32px;letter-spacing:0.6px;font-weight:700;
+      font-family:'Merriweather', serif;
+      color:var(--text)
+    }
+    .brand p.tagline{margin:6px 0 0;font-size:14px;color:var(--subtext);font-weight:600}
+    .brand p.project{margin:4px 0 0;font-size:13px;color:var(--accent);font-style:italic}
+
+    /* ==========================
+       NAV BAR
+       ========================== */
+    nav.navbar{
+      background:rgba(255,255,255,0.9);
+      backdrop-filter: blur(6px);
+      box-shadow:var(--shadow);
+      border-radius:12px;
+      margin:0 auto;
+      display:flex;align-items:center;justify-content:space-between;
+      padding:10px 16px;
+      position:sticky;top:14px;z-index:50;
+    }
+    .nav-left{display:flex;align-items:center;gap:12px}
+    .logo-mini{
+      width:46px;height:46px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));
+      display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:18px;box-shadow:0 6px 18px rgba(42,133,99,0.16)
+    }
+    .nav-links{display:flex;gap:18px;align-items:center}
+    .nav-links a{font-size:14px;padding:8px 10px;border-radius:8px;color:var(--subtext);font-weight:600}
+    .nav-links a:hover{color:var(--accent);background:rgba(42,133,99,0.06)}
+
+    .cta{background:var(--accent);color:white;padding:8px 12px;border-radius:9px;font-weight:700}
+
+    /* mobile menu */
+    .mobile-toggle{display:none;border:0;background:transparent;font-size:22px}
+
+    /* ==========================
+       HERO (VISUAL SPACER)
+       ========================== */
+    .hero{padding:34px 0}
+
+    /* ==========================
+       VISION & MISSION CARDS
+       ========================== */
+    .cards{display:grid;grid-template-columns:repeat(2,1fr);gap:20px;margin-top:12px;margin-bottom:28px}
+    .card{
+      background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;display:flex;align-items:stretch;
+      transform:translateY(8px);opacity:0;transition:all .6s cubic-bezier(.2,.9,.3,1);
+    }
+    .card.visible{transform:none;opacity:1}
+    .card .media{flex:0 0 160px}
+    .card .media img{height:100%;object-fit:cover;width:100%}
+    .card .content{padding:20px}
+    .card h3{margin:0 0 8px;font-size:20px;color:var(--accent-2)}
+    .card p{margin:0;color:var(--subtext);font-size:15px}
+
+    /* make cards stack on mobile */
+    @media (max-width:880px){
+      .cards{grid-template-columns:1fr}
+      .card .media{height:160px}
     }
 
-    header h1 {
-      font-size: 3.5rem;
-      font-weight: bold;
-      margin-bottom: 10px;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.4);
+    /* ==========================
+       ABOUT SECTION
+       ========================== */
+    .about{display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center;padding:28px 0}
+    .about .about-text h2{margin:0 0 12px;font-size:26px}
+    .about .about-text p{color:var(--subtext);font-size:15px}
+    .about .about-img{border-radius:12px;overflow:hidden;box-shadow:var(--shadow)}
+
+    @media (max-width:880px){
+      .about{grid-template-columns:1fr}
     }
 
-    header p {
-      font-size: 1.5rem;
-      font-weight: 500;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-    }
+    /* ==========================
+       FOOTER
+       ========================== */
+    footer{padding:28px 0;color:var(--subtext)}
+    .footer-inner{display:flex;justify-content:space-between;align-items:center;gap:16px}
+    @media (max-width:600px){.footer-inner{flex-direction:column;align-items:flex-start}}
 
-    section {
-      padding: 30px 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
+    /* small util */
+    .muted{color:var(--subtext);font-size:14px}
+    .section{padding:30px 0}
 
-    .grid-2 {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
-    }
+    /* subtle animations */
+    .fade-up{transform:translateY(14px);opacity:0;transition:all .6s cubic-bezier(.2,.9,.3,1)}
+    .fade-up.visible{transform:none;opacity:1}
 
-    .section {
-      background: var(--card-bg);
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      transition: 0.3s;
-    }
-
-    .section img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-    }
-
-    .section-content {
-      padding: 20px;
-    }
-
-    .section-content h2 {
-      margin-bottom: 10px;
-    }
-
-    footer {
-      background: #333;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    @media (max-width: 768px) {
-      .grid-2 {
-        grid-template-columns: 1fr;
-      }
-
-      header h1 {
-        font-size: 2.5rem;
-      }
-
-      header p {
-        font-size: 1.1rem;
-      }
-
-      .section img {
-        height: 180px;
-      }
-    }
   </style>
 </head>
+
 <body>
-  <header>
-    <h1>VATHSALYAM</h1>
-    <p>SPECIAL SCHOOL FOR SPECIAL CHILDRENS</p>
+
+  <header class="site-header">
+    <div class="container">
+      <div class="brand">
+        <h1>VATHSALYAM</h1>
+        <p class="tagline">Special School for Intellectual Children</p>
+        <p class="project">SevaBharathi's Special Project</p>
+      </div>
+
+      <nav class="navbar">
+        <div class="nav-left">
+          <div class="logo-mini" aria-hidden="true">V</div>
+          <div class="nav-links" id="navLinks">
+            <a href="#home">Home</a>
+            <a href="#about">About Us</a>
+            <a href="#programs">Programs & Services</a>
+            <a href="#admissions">Admissions</a>
+            <a href="#events">Events & News</a>
+            <a href="#gallery">Gallery</a>
+            <a href="#contact">Contact</a>
+          </div>
+        </div>
+
+        <div style="display:flex;gap:12px;align-items:center">
+          <a class="cta" href="#contact">Get in Touch</a>
+          <button class="mobile-toggle" id="mobileToggle" aria-label="Open Menu">☰</button>
+        </div>
+      </nav>
+
+    </div>
   </header>
 
-  <section>
-    <h2>About Us</h2>
-    <p>Vathsalyam is a special project of Sevabharathi, started on 17/08/2010 at the Padmanabhapuram Sevabharathi office with only 2 students. More than 70 students have benefitted since. The school supports cultural, economic, and social progress. Now located in Krishnancoil Street, Keralapuram, Kanyakumari District, it has 35 students, 4 special educators, a principal, a coordinator, and 3 helpers.</p>
-  </section>
+  <main>
+    <section id="home" class="hero container">
+      <!-- empty hero for now; keeps top spacing and visual balance -->
+    </section>
 
-  <!-- Vision & Mission -->
-  <section class="grid-2">
-    <div class="section">
-      <img src="vission.jpg" alt="Vision">
-      <div class="section-content">
-        <h2>Vision</h2>
-        <p>"Develop the potential of each individual and stretch it into the maximum."</p>
+    <!-- Vision & Mission -->
+    <section class="container section" aria-labelledby="vision-heading">
+      <div class="cards" id="cards">
+
+        <article class="card fade-up">
+          <div class="media">
+            <!-- Replace placeholder with relevant image -->
+            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Iconic growth image">
+          </div>
+          <div class="content">
+            <h3 id="vision-heading">Vision</h3>
+            <p>Develop the potential of each Individual and stretch it into the maximum</p>
+          </div>
+        </article>
+
+        <article class="card fade-up">
+          <div class="media">
+            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Community support image">
+          </div>
+          <div class="content">
+            <h3>Mission</h3>
+            <p>Together with the community to create social changes for the differently abled make it work</p>
+          </div>
+        </article>
+
       </div>
-    </div>
-    <div class="section">
-      <img src="mission.jpeg" alt="Mission">
-      <div class="section-content">
-        <h2>Mission</h2>
-        <p>"Together with the community to create social changes for the differently abled — make it work."</p>
+    </section>
+
+    <!-- ABOUT SECTION -->
+    <section id="about" class="container about section">
+      <div class="about-text fade-up">
+        <h2>About VATHSALYAM</h2>
+        <p>
+          VATHSALYAM School is a special project of <strong>Sevabharathi</strong>, launched on <strong>17 August 2010</strong> at Padmanabhapuram Sevabharathi office with just <strong>two students</strong>. Since then, more than <strong>70 students</strong> have benefited from our programs.
+        </p>
+        <p>
+          Our school engages in diverse activities that promote progress in both rural and urban areas, fostering <em>cultural, economic, and social change</em> within the community.
+        </p>
+        <p>
+          Today, <strong>VATHSALYAM</strong> is located at <em>Krishnancoil Street, Keralapuram, Kanyakumari District</em>, serving <strong>35 students</strong> with the dedicated guidance of <strong>4 Special Educators</strong>, a <strong>Principal</strong>, a <strong>Coordinator</strong>, and <strong>3 support staff</strong>.
+        </p>
       </div>
+
+      <div class="about-img fade-up">
+        <!-- Replace with an actual photo of the school (recommended size 1200x800) -->
+        <div style="border-radius:12px;overflow:hidden;">
+          <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?q=80&w=1600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="VATHSALYAM School building or students">
+        </div>
+      </div>
+    </section>
+
+    <!-- small placeholder for future sections -->
+    <section id="programs" class="container section">
+      <h3 class="fade-up">Programs & Services</h3>
+      <p class="muted fade-up">(To be added — will include therapies, classes, and extracurricular activities.)</p>
+    </section>
+
+  </main>
+
+  <footer class="container">
+    <div class="footer-inner">
+      <div>
+        <strong>VATHSALYAM</strong>
+        <div class="muted">SevaBharathi's Special Project</div>
+      </div>
+      <div class="muted">© 2025 VATHSALYAM. All rights reserved.</div>
     </div>
-  </section>
-
-  <!-- Services -->
-  <section class="grid-2">
-    <div class="section"><img src="training_autism.jpg" alt=""><div class="section-content"><h2>Autism Training</h2><p>Rehabilitation for autism students. Some return to mainstream schools.</p></div></div>
-    <div class="section"><img src="vocational_training.jpg" alt=""><div class="section-content"><h2>Vocational Training</h2><p>Skill-based training for employability of differently abled persons.</p></div></div>
-    <div class="section"><img src="yoga.jpg" alt=""><div class="section-content"><h2>Yoga</h2><p>Improves physical and mental well-being for better condition management.</p></div></div>
-    <div class="section"><img src="occupational_therapy.jpeg" alt=""><div class="section-content"><h2>Occupational Therapy</h2><p>Enhances daily activity independence. Periodically conducted by experts.</p></div></div>
-    <div class="section"><img src="service-physio.jpg" alt=""><div class="section-content"><h2>Physiotherapy</h2><p>Improves movement and reduces physical deformities.</p></div></div>
-    <div class="section"><img src="service-speech.jpg" alt=""><div class="section-content"><h2>Speech Therapy</h2><p>Supports communication and cognitive development in special children.</p></div></div>
-    <div class="section"><img src="special_education.jpg" alt=""><div class="section-content"><h2>Special Education</h2><p>Includes body movement, hygiene, social skills, reading and writing.</p></div></div>
-    <div class="section"><img src="medical_checkup.jpg" alt=""><div class="section-content"><h2>Medical Checkup</h2><p>Biannual health checkups with medicines from Saradha Homeo Hospital.</p></div></div>
-    <div class="section"><img src="healthy_foods.jpg" alt=""><div class="section-content"><h2>Healthy Foods</h2><p>Nutritious foods like sprouts, fruits, and nuts to improve immunity.</p></div></div>
-  </section>
-
-  <!-- Activities -->
-  <section class="grid-2">
-    <div class="section"><img src="festive_celebration.jpg" alt=""><div class="section-content"><h2>Festive Celebration</h2><p>All major festivals celebrated with sponsors and local community.</p></div></div>
-    <div class="section"><img src="sports.jpg" alt=""><div class="section-content"><h2>Sports Activities</h2><p>Events like frog race, musical chair, jumps, and races are conducted.</p></div></div>
-    <div class="section"><img src="outdoor_activities.jpg" alt=""><div class="section-content"><h2>Outdoor Activities</h2><p>Monthly trips to develop social knowledge and life exposure.</p></div></div>
-    <div class="section"><img src="special-efforts.jpg" alt=""><div class="section-content"><h2>Special Efforts</h2><p>Slow learners trained and transitioned into mainstream education.</p></div></div>
-    <div class="section"><img src="extra_curricular.jpg" alt=""><div class="section-content"><h2>Extra Curricular</h2><p>Includes Bharatanatyam, drama, speech, drawing, and Thirukkural.</p></div></div>
-  </section>
-
-  <!-- Donation / Support -->
-  <section>
-    <h2>What Can We Do?</h2>
-    <p>Events like wedding anniversaries, birthdays, and parent anniversaries can be celebrated with our children.</p>
-    <h3>Current Requirements:</h3>
-    <p>ஒரு நாள் பராமரிப்பு செலவு : ₹10,000/-<br>ஒரு மாத பராமரிப்பு செலவு : ₹2,00,000/-<br>ஒரு வருட பராமரிப்பு செலவு : ₹24,00,000/-</p>
-
-    <h3>Bank Details:</h3>
-    <p>Bank: State Bank of India, Vadassery, Nagercoil<br>Account No: 34691671515<br>IFSC: SBIN0000880</p>
-
-    <h3>Contact Info:</h3>
-    <p>Phone: 94446 18957, 94423 78957<br>Email: vathsalyam2011@gmail.com</p>
-
-    <p><strong>Address:</strong><br>Vathsalyam Special School for Intellectual Children,<br>Krishnancoil Street, Keralapuram,<br>Thiruvithancode Post – 629174,<br>Kanyakumari District.</p>
-
-    <p><strong>Visit with your family! Request a hand with us on this service!</strong></p>
-  </section>
-
-  <footer>
-    <p>© VATHSALYAM 2025 - All Rights Reserved</p>
   </footer>
+
+  <script>
+    // Mobile menu toggle (simple)
+    const mobileToggle = document.getElementById('mobileToggle');
+    const navLinks = document.getElementById('navLinks');
+    mobileToggle.addEventListener('click', ()=>{
+      if(navLinks.style.display === 'flex'){
+        navLinks.style.display = '';
+      }else{
+        navLinks.style.display = 'flex';
+        navLinks.style.flexDirection = 'column';
+        navLinks.style.background = 'transparent';
+        navLinks.style.position = 'absolute';
+        navLinks.style.top = '72px';
+        navLinks.style.right = '20px';
+        navLinks.style.padding = '12px';
+        navLinks.style.borderRadius = '10px';
+      }
+    });
+
+    // Intersection Observer for subtle reveal
+    const observer = new IntersectionObserver((entries)=>{
+      entries.forEach(entry=>{
+        if(entry.isIntersecting){
+          entry.target.classList.add('visible');
+        }
+      });
+    },{threshold:0.15});
+
+    document.querySelectorAll('.fade-up').forEach(el=>observer.observe(el));
+
+    // Smooth scroll for internal links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor=>{
+      anchor.addEventListener('click', function(e){
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if(target){
+          target.scrollIntoView({behavior:'smooth',block:'start'});
+        }
+      });
+    });
+
+    // Small responsive behavior: ensure navLinks shown on resize
+    window.addEventListener('resize', ()=>{
+      if(window.innerWidth > 880){
+        navLinks.style.display = '';
+        navLinks.style.flexDirection = '';
+        navLinks.style.position = '';
+      }
+    });
+
+    // Accessibility: allow Esc to close mobile menu
+    window.addEventListener('keydown', (e)=>{
+      if(e.key === 'Escape'){
+        navLinks.style.display = '';
+      }
+    });
+  </script>
 </body>
 </html>
