--- a/index.html
+++ b/index.html
@@ -8,150 +8,156 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 
-  <!-- Basic SEO -->
-  <meta name="description" content="VATHSALYAM — SevaBharathi's special project: a school for differently-abled children focused on individual growth and community change.">
-
   <style>
-    /* ==========================
-       VARIABLES & BASE STYLES
-       ========================== */
-    :root{
-      --bg:#ffffff;
-      --muted:#f6f9fb;
-      --card:#ffffff;
-      --accent:#4aa96c; /* calming green */
-      --accent-2:#2b8fb6; /* soft blue */
-      --text:#0f1724;
-      --subtext:#4b5563;
-      --radius:14px;
+    :root {
+      --bg: #ffffff;
+      --muted: #f6f9fb;
+      --accent: #4aa96c;
+      --accent-2: #2b8fb6;
+      --text: #0f1724;
+      --subtext: #4b5563;
+      --radius: 14px;
       --shadow: 0 6px 20px rgba(15,23,36,0.08);
-      --glass: rgba(255,255,255,0.7);
     }
 
-    *{box-sizing:border-box}
-    html,body{height:100%;}
-    body{
-      margin:0;
-      font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-      background:linear-gradient(180deg,var(--muted),#fff 40%);
-      color:var(--text);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      line-height:1.5;
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(180deg, var(--muted), #fff 40%);
+      color: var(--text);
+    }
+    .container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
+
+    /* HEADER */
+    header.site-header {
+      background: var(--bg);
+      padding: 80px 0 40px;
+      text-align: center;
+    }
+    .brand h1 {
+      font-size: 64px;
+      font-weight: 700;
+      font-family: 'Merriweather', serif;
+      letter-spacing: 1px;
+      color: var(--text);
+    }
+    .brand p.tagline {
+      font-size: 28px;
+      color: var(--subtext);
+      font-weight: 600;
+      margin-top: 10px;
+    }
+    .brand p.project {
+      font-size: 20px;
+      color: var(--accent);
+      font-style: italic;
+      margin-top: 6px;
     }
 
-    img{max-width:100%;display:block;height:auto}
-    a{color:inherit;text-decoration:none}
-
-    .container{max-width:1100px;margin:0 auto;padding:0 20px}
-
-    /* ==========================
-       HEADER
-       ========================== */
-    header.site-header{
-      background:var(--bg);
-      padding:28px 0 8px;
-      position:relative;
-      z-index:40;
-    }
-
-    .brand{
-      text-align:center;
-      padding:6px 0 14px;
-    }
-    .brand h1{
-      margin:0;font-size:32px;letter-spacing:0.6px;font-weight:700;
-      font-family:'Merriweather', serif;
-      color:var(--text)
-    }
-    .brand p.tagline{margin:6px 0 0;font-size:14px;color:var(--subtext);font-weight:600}
-    .brand p.project{margin:4px 0 0;font-size:13px;color:var(--accent);font-style:italic}
-
-    /* ==========================
-       NAV BAR
-       ========================== */
-    nav.navbar{
-      background:rgba(255,255,255,0.9);
+    /* NAV */
+    nav.navbar {
+      background: rgba(255,255,255,0.9);
       backdrop-filter: blur(6px);
-      box-shadow:var(--shadow);
-      border-radius:12px;
-      margin:0 auto;
-      display:flex;align-items:center;justify-content:space-between;
-      padding:10px 16px;
-      position:sticky;top:14px;z-index:50;
+      box-shadow: var(--shadow);
+      border-radius: 12px;
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 16px;
+      position: sticky;
+      top: 14px;
+      z-index: 50;
+      gap: 18px;
     }
-    .nav-left{display:flex;align-items:center;gap:12px}
-    .logo-mini{
-      width:46px;height:46px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));
-      display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:18px;box-shadow:0 6px 18px rgba(42,133,99,0.16)
+    nav.navbar a {
+      font-size: 14px;
+      padding: 8px 10px;
+      border-radius: 8px;
+      color: var(--subtext);
+      font-weight: 600;
+      text-decoration: none;
     }
-    .nav-links{display:flex;gap:18px;align-items:center}
-    .nav-links a{font-size:14px;padding:8px 10px;border-radius:8px;color:var(--subtext);font-weight:600}
-    .nav-links a:hover{color:var(--accent);background:rgba(42,133,99,0.06)}
-
-    .cta{background:var(--accent);color:white;padding:8px 12px;border-radius:9px;font-weight:700}
-
-    /* mobile menu */
-    .mobile-toggle{display:none;border:0;background:transparent;font-size:22px}
-
-    /* ==========================
-       HERO (VISUAL SPACER)
-       ========================== */
-    .hero{padding:34px 0}
-
-    /* ==========================
-       VISION & MISSION CARDS
-       ========================== */
-    .cards{display:grid;grid-template-columns:repeat(2,1fr);gap:20px;margin-top:12px;margin-bottom:28px}
-    .card{
-      background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;display:flex;align-items:stretch;
-      transform:translateY(8px);opacity:0;transition:all .6s cubic-bezier(.2,.9,.3,1);
-    }
-    .card.visible{transform:none;opacity:1}
-    .card .media{flex:0 0 160px}
-    .card .media img{height:100%;object-fit:cover;width:100%}
-    .card .content{padding:20px}
-    .card h3{margin:0 0 8px;font-size:20px;color:var(--accent-2)}
-    .card p{margin:0;color:var(--subtext);font-size:15px}
-
-    /* make cards stack on mobile */
-    @media (max-width:880px){
-      .cards{grid-template-columns:1fr}
-      .card .media{height:160px}
+    nav.navbar a:hover {
+      color: var(--accent);
+      background: rgba(42,133,99,0.06);
     }
 
-    /* ==========================
-       ABOUT SECTION
-       ========================== */
-    .about{display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center;padding:28px 0}
-    .about .about-text h2{margin:0 0 12px;font-size:26px}
-    .about .about-text p{color:var(--subtext);font-size:15px}
-    .about .about-img{border-radius:12px;overflow:hidden;box-shadow:var(--shadow)}
-
-    @media (max-width:880px){
-      .about{grid-template-columns:1fr}
+    /* VISION & MISSION */
+    .vision-mission {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      margin: 50px auto;
+      padding: 0 20px;
+    }
+    .card {
+      background: var(--bg);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      overflow: hidden;
+      text-align: center;
+      padding-bottom: 20px;
+      transition: transform 0.3s ease;
+    }
+    .card:hover { transform: translateY(-5px); }
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .card h3 {
+      font-size: 22px;
+      margin: 15px 0 8px;
+      color: var(--accent);
+    }
+    .card p {
+      font-size: 14px;
+      padding: 0 15px;
+      color: var(--subtext);
+      line-height: 1.5;
     }
 
-    /* ==========================
-       FOOTER
-       ========================== */
-    footer{padding:28px 0;color:var(--subtext)}
-    .footer-inner{display:flex;justify-content:space-between;align-items:center;gap:16px}
-    @media (max-width:600px){.footer-inner{flex-direction:column;align-items:flex-start}}
+    /* ABOUT */
+    section#about {
+      padding: 50px 20px;
+      background: var(--muted);
+    }
+    .about-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 30px;
+      align-items: center;
+    }
+    .about-text h2 {
+      font-size: 28px;
+      color: var(--accent);
+      margin-bottom: 15px;
+    }
+    .about-text p {
+      font-size: 15px;
+      color: var(--subtext);
+      line-height: 1.6;
+      text-align: justify;
+    }
+    .about-image img {
+      width: 100%;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      object-fit: cover;
+    }
 
-    /* small util */
-    .muted{color:var(--subtext);font-size:14px}
-    .section{padding:30px 0}
-
-    /* subtle animations */
-    .fade-up{transform:translateY(14px);opacity:0;transition:all .6s cubic-bezier(.2,.9,.3,1)}
-    .fade-up.visible{transform:none;opacity:1}
-
+    /* RESPONSIVE TWEAKS */
+    @media (max-width: 600px) {
+      .brand h1 { font-size: 42px; }
+      .brand p.tagline { font-size: 20px; }
+      .brand p.project { font-size: 16px; }
+    }
   </style>
 </head>
-
 <body>
 
+  <!-- HEADER -->
   <header class="site-header">
     <div class="container">
       <div class="brand">
@@ -159,160 +165,44 @@
         <p class="tagline">Special School for Intellectual Children</p>
         <p class="project">SevaBharathi's Special Project</p>
       </div>
-
       <nav class="navbar">
-        <div class="nav-left">
-          <div class="logo-mini" aria-hidden="true">V</div>
-          <div class="nav-links" id="navLinks">
-            <a href="#home">Home</a>
-            <a href="#about">About Us</a>
-            <a href="#programs">Programs & Services</a>
-            <a href="#admissions">Admissions</a>
-            <a href="#events">Events & News</a>
-            <a href="#gallery">Gallery</a>
-            <a href="#contact">Contact</a>
-          </div>
-        </div>
-
-        <div style="display:flex;gap:12px;align-items:center">
-          <a class="cta" href="#contact">Get in Touch</a>
-          <button class="mobile-toggle" id="mobileToggle" aria-label="Open Menu">☰</button>
-        </div>
+        <a href="#home">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#programs">Programs & Services</a>
+        <a href="#admissions">Admissions</a>
+        <a href="#events">Events & News</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact">Contact</a>
       </nav>
-
     </div>
   </header>
 
-  <main>
-    <section id="home" class="hero container">
-      <!-- empty hero for now; keeps top spacing and visual balance -->
-    </section>
-
-    <!-- Vision & Mission -->
-    <section class="container section" aria-labelledby="vision-heading">
-      <div class="cards" id="cards">
-
-        <article class="card fade-up">
-          <div class="media">
-            <!-- Replace placeholder with relevant image -->
-            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Iconic growth image">
-          </div>
-          <div class="content">
-            <h3 id="vision-heading">Vision</h3>
-            <p>Develop the potential of each Individual and stretch it into the maximum</p>
-          </div>
-        </article>
-
-        <article class="card fade-up">
-          <div class="media">
-            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Community support image">
-          </div>
-          <div class="content">
-            <h3>Mission</h3>
-            <p>Together with the community to create social changes for the differently abled make it work</p>
-          </div>
-        </article>
-
-      </div>
-    </section>
-
-    <!-- ABOUT SECTION -->
-    <section id="about" class="container about section">
-      <div class="about-text fade-up">
-        <h2>About VATHSALYAM</h2>
-        <p>
-          VATHSALYAM School is a special project of <strong>Sevabharathi</strong>, launched on <strong>17 August 2010</strong> at Padmanabhapuram Sevabharathi office with just <strong>two students</strong>. Since then, more than <strong>70 students</strong> have benefited from our programs.
-        </p>
-        <p>
-          Our school engages in diverse activities that promote progress in both rural and urban areas, fostering <em>cultural, economic, and social change</em> within the community.
-        </p>
-        <p>
-          Today, <strong>VATHSALYAM</strong> is located at <em>Krishnancoil Street, Keralapuram, Kanyakumari District</em>, serving <strong>35 students</strong> with the dedicated guidance of <strong>4 Special Educators</strong>, a <strong>Principal</strong>, a <strong>Coordinator</strong>, and <strong>3 support staff</strong>.
-        </p>
-      </div>
-
-      <div class="about-img fade-up">
-        <!-- Replace with an actual photo of the school (recommended size 1200x800) -->
-        <div style="border-radius:12px;overflow:hidden;">
-          <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?q=80&w=1600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="VATHSALYAM School building or students">
-        </div>
-      </div>
-    </section>
-
-    <!-- small placeholder for future sections -->
-    <section id="programs" class="container section">
-      <h3 class="fade-up">Programs & Services</h3>
-      <p class="muted fade-up">(To be added — will include therapies, classes, and extracurricular activities.)</p>
-    </section>
-
-  </main>
-
-  <footer class="container">
-    <div class="footer-inner">
-      <div>
-        <strong>VATHSALYAM</strong>
-        <div class="muted">SevaBharathi's Special Project</div>
-      </div>
-      <div class="muted">© 2025 VATHSALYAM. All rights reserved.</div>
+  <!-- VISION & MISSION -->
+  <section class="vision-mission">
+    <div class="card">
+      <img src="https://source.unsplash.com/600x400/?education,kids" alt="Vision">
+      <h3>Vision</h3>
+      <p>Develop the potential of each Individual and stretch it into the maximum.</p>
     </div>
-  </footer>
+    <div class="card">
+      <img src="https://source.unsplash.com/600x400/?teamwork,community" alt="Mission">
+      <h3>Mission</h3>
+      <p>Together with the community to create social changes for the differently abled make it work.</p>
+    </div>
+  </section>
 
-  <script>
-    // Mobile menu toggle (simple)
-    const mobileToggle = document.getElementById('mobileToggle');
-    const navLinks = document.getElementById('navLinks');
-    mobileToggle.addEventListener('click', ()=>{
-      if(navLinks.style.display === 'flex'){
-        navLinks.style.display = '';
-      }else{
-        navLinks.style.display = 'flex';
-        navLinks.style.flexDirection = 'column';
-        navLinks.style.background = 'transparent';
-        navLinks.style.position = 'absolute';
-        navLinks.style.top = '72px';
-        navLinks.style.right = '20px';
-        navLinks.style.padding = '12px';
-        navLinks.style.borderRadius = '10px';
-      }
-    });
+  <!-- ABOUT -->
+  <section id="about">
+    <div class="container about-container">
+      <div class="about-image">
+        <img src="https://source.unsplash.com/600x400/?school,children" alt="About Vathsalyam">
+      </div>
+      <div class="about-text">
+        <h2>About VATHSALYAM</h2>
+        <p>Vathsalyam School is a special project of Sevabharathi, started on 17/08/2010 at Padmanapaburam Sevabharathi office with only 2 students. More than 70 students have benefited from it. The school serves different activities to promote progress in rural and urban areas with cultural, economic, and social changes. Currently, VATHSALYAM is located in Krishnancoil Street, Keralapuram, Kanyakumari District, with 35 students, 4 Special Educators, a Principal, a Co-ordinator, and 3 helpers.</p>
+      </div>
+    </div>
+  </section>
 
-    // Intersection Observer for subtle reveal
-    const observer = new IntersectionObserver((entries)=>{
-      entries.forEach(entry=>{
-        if(entry.isIntersecting){
-          entry.target.classList.add('visible');
-        }
-      });
-    },{threshold:0.15});
-
-    document.querySelectorAll('.fade-up').forEach(el=>observer.observe(el));
-
-    // Smooth scroll for internal links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor=>{
-      anchor.addEventListener('click', function(e){
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute('href'));
-        if(target){
-          target.scrollIntoView({behavior:'smooth',block:'start'});
-        }
-      });
-    });
-
-    // Small responsive behavior: ensure navLinks shown on resize
-    window.addEventListener('resize', ()=>{
-      if(window.innerWidth > 880){
-        navLinks.style.display = '';
-        navLinks.style.flexDirection = '';
-        navLinks.style.position = '';
-      }
-    });
-
-    // Accessibility: allow Esc to close mobile menu
-    window.addEventListener('keydown', (e)=>{
-      if(e.key === 'Escape'){
-        navLinks.style.display = '';
-      }
-    });
-  </script>
 </body>
 </html>
