--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
         <article class="card fade-up">
           <div class="media">
             <!-- Replace placeholder with relevant image -->
-            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Iconic growth image">
-          </div>
+           <img src="images/vision.png" alt="Vision">
+
           <div class="content">
             <h3 id="vision-heading">Vision</h3>
             <p>Develop the potential of each Individual and stretch it into the maximum</p>
@@ -205,7 +205,8 @@
 
         <article class="card fade-up">
           <div class="media">
-            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Community support image">
+           <img src="images/mision.jpg" alt="Mision">
+
           </div>
           <div class="content">
             <h3>Mission</h3>
@@ -325,3 +326,4 @@
 
 </body>
 </html>
+
