--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <article class="card fade-up">
           <div class="media">
-           <img src="images/mision.jpg" alt="Mision">
+           <img src="images/mission.jpg" alt="Mission">
 
           </div>
           <div class="content">
@@ -326,4 +326,5 @@
 
 </body>
 </html>
+
 
